# Practicas

AyEDA/PR1/PR1_MODI/: CMakeLists.txt
AyEDA/PR1/PR1_MODI/src/: Ant.cc  Simulation.cc  Tape.cc  simulation.h  tape.h
AyEDA/PR1/PR1_MODI_01/: CMakeLists.txt  prueba1.txt
AyEDA/PR1/PR1_MODI_01/src/: Simulation.cc  main.cc  tape.h
AyEDA/PR1/PR1_MODI_02/: CMakeLists.txt
AyEDA/PR1/PR1_MODI_02/src/: Ant.cc  Simulation.cc  Tape.cc  main.cc  tape.h
AyEDA/PR1/PR1_ORIGINAL/: CMakeLists.txt  output_2.txt
AyEDA/PR1/PR1_ORIGINAL/src/: Simulation.cc  Tape.cc  ant.h  main.cc  simulation.h  tape.h
AyEDA/PR2/PR2_MODI/: input1.txt  output2.txt
AyEDA/PR2/PR2_MODI/src/: Ant_X.cc  Ant_X.h  Simulation.cc  main.cc  simulation.h  tape.h
AyEDA/PR2/PR2_ORIGINAL/: CMakeLists.txt  input1.txt  output2.txt
AyEDA/PR2/PR2_ORIGINAL/src/: Ant.cc  Ant_X.cc  Simulation.cc  Tape.cc  ant.h
