cmake_minimum_required(VERSION 3.5)
project(Practicas_AyEDA VERSION 1.0 DESCRIPTION "Práctica #01: Hormiga de Langton (MODIFICACION)" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic -Weffc++")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(p01_hormiga_langton_MODI src/main.cc src/Ant.cc src/Simulation.cc src/Tape.cc src/ant.h src/simulation.h src/tape.h src/colors.h)
target_compile_features(p01_hormiga_langton_MODI PRIVATE cxx_std_17)
target_compile_options(p01_hormiga_langton_MODI PRIVATE -Wall -Wextra -Wpedantic -Weffc++)