cmake_minimum_required(VERSION 3.5)
project(Practicas_AyEDA VERSION 1.0 DESCRIPTION "Práctica #02: Hormiga de Langton especifica" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic -Weffc++")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(p02_hormiga_langton_especifica src/main.cc src/Ant.cc src/Simulation.cc src/Tape.cc src/Ant_X.cc src/ant.h src/simulation.h src/tape.h src/Ant_X.h src/colors.h)
target_compile_features(p02_hormiga_langton_especifica PRIVATE cxx_std_17)
target_compile_options(p02_hormiga_langton_especifica PRIVATE -Wall -Wextra -Wpedantic -Weffc++)